--- a/.github/workflows/upstream-sync.yml
+++ b/.github/workflows/upstream-sync.yml
@@ -22,5 +22,5 @@ jobs:
           git remote add upstream https://github.com/VDuyHoang/testgit.git
           git fetch upstream --tags
           LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
-          git merge "$LATEST_TAG"
+          git merge "$LATEST_TAG" --no-commit
           git push
