--- a/.github/workflows/upstream-sync.yml
+++ b/.github/workflows/upstream-sync.yml
@@ -23,4 +23,4 @@ jobs:
           git fetch upstream --tags -f
           LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
           git merge "$LATEST_TAG"
-          git push
+          git push origin master
