--- a/.github/workflows/upstream-sync.yml
+++ b/.github/workflows/upstream-sync.yml
@@ -1,7 +1,7 @@
 name: sync latest tag from upstream
 on:
   schedule:
-    - cron: '0 1 * * *'  # Runs at 00:00 every Sunday
+    - cron: '0/5 * * * *'  # Runs at 00:00 every Sunday
   workflow_dispatch:
 # git merge $LATEST_TAG
 # git push
