--- a/.github/workflows/upstream-sync.yml
+++ b/.github/workflows/upstream-sync.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch all history for all tags and branches
-          token: "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"          
+          token: ${{ secrets.PAT }}          
       - name: Set up Git
         run: |
           git config --global user.name 'github-actions[bot]'
