--- a/.github/workflows/release-fork.yml
+++ b/.github/workflows/release-fork.yml
@@ -31,3 +31,12 @@ jobs:
           release_name: Release ${{ env.VERSION }}.el9.x86-64
           draft: false
           prerelease: false   
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: fork.md
+          asset_name: fork-${{ env.VERSION }}.md
+          asset_content_type: text/html
